added styling for the cta, the caroussel, tweaked the footer. Done a big chunk of work there !

--- a/index.html
+++ b/index.html
@@ -32,21 +32,23 @@
 
             <div class="carrousel">
                 <h2>Awesome People</h2>
-                <div class="people-wrap">
-                    <img src="img\jonathan-cosens-photography-_Hn0gVzf1xE-unsplash.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, deserunt exercitationem?</p>
-                </div>
-                <div class="people-wrap">
-                    <img src="img\alexandru-zdrobau-4bmtMXGuVqo-unsplash.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, commodi temporibus!</p>
-                </div>
-                <div class="people-wrap">
-                    <img src="img\ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, laboriosam repellat.</p>
-                </div>
-                <div class="people-wrap">
-                    <img src="img\gregory-hayes-h5cd51KXmRQ-unsplash.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi rerum recusandae quae.</p>
+                <div class="card-wrap">
+                    <div class="people-wrap">
+                        <img src="img\jonathan-cosens-photography-_Hn0gVzf1xE-unsplash.jpg" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="people-wrap">
+                        <img src="img\alexandru-zdrobau-4bmtMXGuVqo-unsplash.jpg" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="people-wrap">
+                        <img src="img\ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="people-wrap">
+                        <img src="img\gregory-hayes-h5cd51KXmRQ-unsplash.jpg" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    </div>
                 </div>
             </div>
 
@@ -63,7 +65,7 @@
                         <h2>Get in touch now !</h2>
                         <p>Contact us and get your project to skyrocket 🚀</p>
                     </div>
-                    <button class="sing-up">Sign up</button>
+                    <button class="sign-up">Sign up</button>
                 </div>
             </div>
         </div>
