changed footer credit

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="footer">
-            <p>Copyright © aCuriousDev 2021 </p>
+            <p>Copyright © aCuriousDev 2021 | Designed by The Odin Project</p>
         </div>
     </div>
 </body>
